--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "^10.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwind-variants": "^0.2.1"
   },
