--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.4.6",
     "@nextui-org/theme": "^2.2.9",
     "@radix-ui/react-hover-card": "^1.1.1",
+    "@react-hook/window-size": "^3.1.1",
     "animate.css": "^4.1.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.24",
