--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/theme": "^2.2.9",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@react-hook/window-size": "^3.1.1",
+    "@xyflow/react": "^12.1.0",
     "animate.css": "^4.1.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.24",
