--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "laszlogulyas",
+  "name": "laszlogulyas-debug",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,25 +11,20 @@
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.42",
     "@nextui-org/react": "^2.4.6",
-    "@nextui-org/theme": "^2.2.9",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@react-hook/window-size": "^3.1.1",
-    "@xyflow/react": "^12.1.0",
+    "@xyflow/react": "^12.1.1",
     "animate.css": "^4.1.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.3.24",
-    "gsap": "^3.12.5",
-    "jquery": "^3.7.1",
+    "framer-motion": "^11.3.28",
     "next": "14.2.5",
     "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-responsive": "^10.0.0",
-    "tailwind-merge": "^2.5.2",
-    "tailwind-variants": "^0.2.1"
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
-    "@types/node": "22.2.0",
+    "@types/node": "22.4.1",
     "@types/react": "18.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
